--- a/src/Login/registerform.form
+++ b/src/Login/registerform.form
@@ -174,12 +174,11 @@
               <Color blue="66" green="66" red="66" type="rgb"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="5">
+              <StringArray count="4">
                 <StringItem index="0" value="Select User Type"/>
                 <StringItem index="1" value="Manager"/>
                 <StringItem index="2" value="Worker"/>
-                <StringItem index="3" value="Engineer"/>
-                <StringItem index="4" value="Admin"/>
+                <StringItem index="3" value=" "/>
               </StringArray>
             </Property>
           </Properties>
